--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@phosphor-icons/react": "^2.1.7",
+        "date-fns": "^4.1.0",
         "next": "14.0.3",
+        "pannellum": "^2.5.6",
+        "postcss-import": "^16.1.0",
+        "postcss-nesting": "^13.0.1",
+        "postcss-scss": "^4.0.9",
         "react": "^18",
+        "react-date-range": "^2.0.1",
         "react-dom": "^18",
         "react-slick": "^0.30.3",
+        "react-sticky-box": "^2.0.5",
         "react-youtube": "^10.1.0",
         "sass": "^1.83.4",
         "slick-carousel": "^1.8.1",
@@ -21,12 +29,14 @@
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/postcss-import": "^14.0.3",
         "@types/react": "^18",
+        "@types/react-date-range": "^1.4.9",
         "@types/react-dom": "^18",
         "@types/react-slick": "^0.23.13",
-        "autoprefixer": "^10.0.1",
-        "postcss": "^8",
-        "tailwindcss": "^3.3.0",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.5.1",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5"
     }
 }
