--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev -p 4000",
+        "dev": "next dev -p 4001",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -11,7 +11,10 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@phosphor-icons/react": "^2.1.7",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "lucide-react": "^0.474.0",
         "next": "14.0.3",
         "pannellum": "^2.5.6",
         "postcss-import": "^16.1.0",
@@ -25,7 +28,9 @@
         "react-youtube": "^10.1.0",
         "sass": "^1.83.4",
         "slick-carousel": "^1.8.1",
-        "swiper": "^11.2.1"
+        "swiper": "^11.2.1",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
