--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "slick-carousel": "^1.8.1",
         "stripe": "^17.6.0",
         "swiper": "^11.2.1",
+        "swr": "^2.3.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     },
